// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Profile render @isProfileLoading is false && @profile is false 1`] = `
<div
  className="container"
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Wrong user | Profile
    </title>
    <meta
      content="Profile description"
      name="description"
    />
  </HelmetWrapper>
  <Wrapper>
    <NoSuchUser />
  </Wrapper>
</div>
`;

exports[`Profile render @isProfileLoading is false && @profile is true 1`] = `
<div
  className="container"
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Wrong user | Profile
    </title>
    <meta
      content="Profile description"
      name="description"
    />
  </HelmetWrapper>
  <Wrapper>
    <div>
      Children
    </div>
  </Wrapper>
</div>
`;

exports[`Profile render @isProfileLoading is true 1`] = `
<div
  className="container"
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Wrong user | Profile
    </title>
    <meta
      content="Profile description"
      name="description"
    />
  </HelmetWrapper>
  <Wrapper>
    <LoadingIndicator />
  </Wrapper>
</div>
`;
